Unreviewed, fix testb3 input types https://bugs.webkit.org/show_bug.cgi?id=299681 rdar://161494315

Fix parameter types.

Test: Source/JavaScriptCore/b3/testb3_8.cpp
* Source/JavaScriptCore/b3/testb4_8.cpp:
(testMemoryFill):
(testMemoryFillConstant):

Canonical link: https://commits.webkit.org/300655@main